added a command to fix db error

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,7 @@ jobs:
           POSTGRES_PASSWORD: postgres
         run: |
           sudo apt-get -yqq install libpq-dev
+          sudo -u postgres createuser test --createdb
           gem install bundler
           bundle install --jobs 4 --retry 3
           bundle exec rake db:create
