--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,8 @@ development:
 test:
   <<: *default
   database: BMES_Participation_Tracker_test
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
