--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,6 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rake db:create
           bundle exec rake db:migrate
+          bundle exec rake db:seed
           bundle exec rspec .
 
