--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,8 +78,8 @@ jobs:
         gem install bundler
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
-        bin/rails db:migrate:reset
-        bin/rails db:seed
+        bundle exec rake db:migrate:reset
+        bundle exec rake db:seed
     - name: Run tests
       env:
         PGHOST: localhost
