--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,14 @@
-# main.yml
-
-
-name: CI/CD
+name: CI
+ 
 on: [push, pull_request]
+
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-    
     services:
       db:
         image: postgres:12
-        ports: ["5432:5432"]
+        ports: ['5432:5432']
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -23,40 +21,29 @@ jobs:
         image: redis
         ports: ["6379:6379"]
         options: --entrypoint redis-server
-      chrome:
-        image: selenium/standalone-chrome:3.141.59-zirconium # this version should match that of the selenium-webdriver gem
-        env:
-          HUB_URL: http://chrome:4444/wd/hub
-        volumes:
-          - /dev/shm:/dev/shm
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Setup Ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7.x
-      - name: Set up Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: '10.23.1'
-          registry-url: 'https://registry.npmjs.org'
-      - uses: borales/actions-yarn@v2.0.0
+          ruby-version: 2.7.2
+      - uses: borales/actions-yarn@v2.3.0
         with:
           cmd: install
-      - name: Build and run test
+      - name: Build and run tests
         env:
-          DATABASE_URL: postgres://postgres:@localhost:5432/test
+        
+          DATABASE_URL: postgres://postgres@localhost:5432/test 
           REDIS_URL: redis://localhost:6379/0
           RAILS_ENV: test
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
         run: |
-          sudo apt-get -yqq install libpq-dev
+          sudo apt-get install libpq-dev
           gem install bundler
-          bundle install --jobs 4 --retry 3
-          bundle exec rake db:create
-          bundle exec rake db:migrate
-          bundle exec rake db:seed
+          bundle install
+          bundle exec rails db:reset
+          bundle exec rails db:migrate
+          bundle exec rails test
           bundle exec rspec .
-
