more changes to gemfile

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,24 @@
+# main.yml
+
+
 name: CI/CD
 on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     services:
       db:
         image: postgres:12
         ports: ["5432:5432"]
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       redis:
         image: redis
         ports: ["6379:6379"]
@@ -24,12 +32,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: nanasess/setup-chromedriver@master
       - name: Setup Ruby
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: 3.0.0
-      - uses: borales/actions-yarn@v2.3.0
+          ruby-version: 2.7.x
+      - name: Set up Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.23.1'
+          registry-url: 'https://registry.npmjs.org'
+      - uses: borales/actions-yarn@v2.0.0
         with:
           cmd: install
       - name: Build and run test
@@ -38,16 +50,14 @@ jobs:
           REDIS_URL: redis://localhost:6379/0
           RAILS_ENV: test
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: postgres
         run: |
-          export DISPLAY=:99
           chromedriver --url-base=/wd/hub &
-          sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
           sudo apt-get -yqq install libpq-dev
           gem install bundler
           bundle install --jobs 4 --retry 3
-          bundle exec rake webpacker:install
           bundle exec rake db:create
           bundle exec rake db:migrate
           bundle exec rake db:seed
           bundle exec rspec .
+
