--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
           bundle install --jobs 4 --retry 3
           bundle exec rake db:create
           bundle exec rake db:migrate
-          bundle exec rake db:seed RAILS_ENV=test
+          bundle exec rake db:seed
           bundle exec rspec .
       - name: Simplecov Report
         uses: aki77/simplecov-report-action@v1
