updated workflow file in this commit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,4 +65,5 @@ jobs:
         uses: aki77/simplecov-report-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          failedThreshold: 99
 
